--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Local_Roasters",
+    "name": "cunyHack",
     "slug": "app",
     "privacy": "public",
     "sdkVersion": "35.0.0",
