--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-maps": "^0.26.1",
     "react-native-router-flux": "^4.0.6",
-    "react-native-web": "^0.11.7"
+    "react-native-web": "^0.11.7",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-axios-middleware": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.0.0"
