--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "expo-cli": "^3.4.1",
+    "firebase": "^7.2.1",
     "native-base": "^2.13.8",
     "react": "16.8.3",
     "react-dom": "16.8.3",
