--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "expo-cli": "^3.4.1",
     "firebase": "^7.2.1",
     "native-base": "^2.13.8",
+    "node": "^12.12.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-maps": "^0.26.1",
     "react-native-router-flux": "^4.0.6",
+    "react-native-star-rating": "^1.1.0",
     "react-native-web": "^0.11.7",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
